# android-telemetry-dock

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: database-access.md  mobile-app.md  monitoring.md  usage-timeline.md
mobile/android/: .gitignore  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/dev/local/androidtelemetrydock/: BootReceiver.java  MainActivity.java  TelemetryScheduler.java  TelemetrySettings.java  TelemetryUploadJobService.java  TelemetryUploader.java  UsagePayloadBuilder.java
mobile/android/app/src/main/res/values/: styles.xml
scripts/: start-local.ps1
src/android_telemetry_dock/: __init__.py  api_server.py  config.py  main.py  maintenance.py  scheduler.py
src/android_telemetry_dock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/android_telemetry_dock/adb/: __init__.py  manager.py
src/android_telemetry_dock/collectors/: __init__.py  app_metadata.py  base.py  registry.py  usage_history.py
src/android_telemetry_dock/presence/: __init__.py  devices.py  scanner.py
src/android_telemetry_dock/storage/: __init__.py  db.py
src/android_telemetry_dock/storage/migrations/: 001_initial.sql  002_usage_timeline.sql  003_usage_timeline_dedup.sql  004_device_status.sql  005_app_metadata.sql
tests/: test_api_server.py  test_config.py  test_storage.py  test_usage_history.py
