[project]
name = "android-telemetry-dock"
version = "0.1.0"
description = "Dockerized home-network Android telemetry collector using ADB and SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.scripts]
android-telemetry-dock = "android_telemetry_dock.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
android_telemetry_dock = ["storage/migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
